--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,5 @@ pygments: true
 permalink: /:title.html
 name: "吕小荣的笔记"
 url: "http://mednoter.com"
+description: "医学互联网产品的点点滴滴"
 markdown: rdiscount
