--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,5 @@ permalink: /:title.html
 name: "吕小荣的笔记"
 url: "http://mednoter.com"
 description: "医学互联网产品的点点滴滴"
+copyright: "Copyright 2012-2013, mednoter.com"
 markdown: rdiscount
