Give praise to God

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            "吕小荣的笔记"
+title:            "吕小荣"
 description:      "Journey of Life"
 url:              "http://mednoter.com"
 signoff:          "吕小荣"
