如何与一个非基督徒辩论

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            "吕小荣"
-description:      "Journey of Life"
+description:      "揉合医学与互联网"
 url:              "http://mednoter.com"
 signoff:          "吕小荣"
 disqus_shortname: "mednoter"
