--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ redcarpet:
   extensions:
     - smart
     - tables
+    - with_toc_data
     - strikethrough
     - no_intra_emphasis
     - fenced_code_blocks
     - space_after_headers
-
