--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            "吕小荣"
-description:      "揉合医学与互联网"
+description:      "一个程序员"
 url:              "http://mednoter.com"
 signoff:          "吕小荣"
 disqus_shortname: "mednoter"
