--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ facebook_appid:   "407484809306168"
 google_analytics: ""
 timezone:         Asia/Beijing
 highlighter:      pygments
+future:           true
 
 links:
   - name:         Blog
@@ -19,13 +20,13 @@ links:
     url:          /about.html
 
 permalink:        /:title.html
-markdown:         redcarpet
-redcarpet:
-  extensions:
-    - smart
-    - tables
-    - with_toc_data
-    - strikethrough
-    - no_intra_emphasis
-    - fenced_code_blocks
-    - space_after_headers
+markdown:         kramdown
+highlighter: rouge
+markdown: kramdown
+kramdown:
+  input: GFM
+  auto_ids: true
+  syntax_highlighter: rouge
+  
+sass:
+  style: compressed
