Replace email address with `Edit this page` in signoff
1. allow other developer to correct mis-spell.

2. Comments is not welcome.

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ google_analytics: ""
 timezone:         Asia/Beijing
 highlighter:      pygments
 future:           true
+repository_url:   https://github.com/xiaoronglv/xiaoronglv.github.io
 
 links:
   - name:         Blog
