--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,8 @@ links:
     url:          /feed.xml
   - name:         About
     url:          /about.html
+  - name:         tencent
+  - url:          /tencent2075501715799328467.txt
 
 permalink:        /:title.html
 markdown:         kramdown
